--- a/libs/ui/src/lib/create-activity/CreateActivity.module.less
+++ b/libs/ui/src/lib/create-activity/CreateActivity.module.less
@@ -247,20 +247,16 @@
           .customInputText {
             margin-top: 16px;
             position: relative;
-            .dollar-icon{
+            .lead-icon {
               svg {
-                margin-right: 11px;
-                margin-left: -3px;
+                margin-left: 8px;
                 fill: #9292A3;
               }
             }
             .user {
               svg {
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-                left: 12px;
-                z-index: 9;
+                margin-left: 8px;
+                fill: #9292A3;
               }
             }
             :global {
