--- a/libs/ui/src/lib/dropdown-with-icon/DropdownWithIcon.module.less
+++ b/libs/ui/src/lib/dropdown-with-icon/DropdownWithIcon.module.less
@@ -14,9 +14,9 @@
 
 .custom-dropdown-wrapper {
   .btn-dropdown {
-    border: 1px solid #ecedf0;
+    border: 1px solid #ECEDF0;
     border-radius: 4px;
-    color: #9292a3;
+    color: #9292A3;
     font-size: 14px;
     line-height: 22px;
     display: flex;
@@ -47,7 +47,7 @@
 
     .radio-wrapper {
       display: flex;
-      border-bottom: 1px solid #ecedf0;
+      border-bottom: 1px solid #ECEDF0;
       padding-bottom: 12px;
       padding-top: 9px;
       :global {
@@ -76,11 +76,11 @@
           margin-left: 10px;
           font-size: 14px;
           line-height: 18px;
-          color: #3d3d46;
+          color: #3D3D46;
         }
 
         svg {
-          fill: #9292a3;
+          fill: #9292A3;
         }
 
         .plus-btn {
@@ -91,7 +91,7 @@
       .description {
         font-size: 12px;
         line-height: 16px;
-        color: #9292a3;
+        color: #9292A3;
         margin-bottom: 0;
         white-space: normal;
         margin-top: 4px;
