--- a/apps/web/components/Activities/CreateFilterModal.module.less
+++ b/apps/web/components/Activities/CreateFilterModal.module.less
@@ -35,7 +35,7 @@
     .minus-block {
       width: 32px;
       min-width: 32px;
-      margin-left: 14px;
+      // margin-left: 14px;
       height: 32px;
       border: 1px solid #ff5b64;
       border-radius: 50%;
@@ -48,7 +48,7 @@
       .ant-select {
         width: 170px;
         min-width: 170px;
-        // margin-right: 20px;
+        margin-right: 16px;
         &:last-child {
           margin-right: 0;
         }
@@ -58,11 +58,30 @@
         color: #ff5b64;
       }
     }
+    .select-operand {
+      width: auto;
+      min-width: 200px;
+    }
     .custom-radio-wrapper,
     .subject-input {
       display: flex;
       width: 170px;
       min-width: 170px;
+      :global {
+       .ant-radio-button-wrapper {
+        width: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center
+       }
+       .ant-radio-button-wrapper-checked {
+        color: #ffffff;
+        background: #54b2d3;
+      }
+      }
+    }
+    .filter-menu-wrapper {
+      margin-right: 20px;
     }
     .client-wrapper {
       position: relative;
@@ -176,6 +195,9 @@
     border: none;
   }
   span {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
     :global {
       .ant-btn {
         margin-right: 16px;
@@ -208,8 +230,7 @@
 .radioBtn {
   color: red;
   span {
-    .menuWrapper {
-      margin-bottom: 4px;
+    .menu-wrapper {
       .icon {
         color: #9292a3;
       }
