created the document viewer page

--- a/apps/web/pages/test/document-viewer/index.module.less
+++ b/apps/web/pages/test/document-viewer/index.module.less
@@ -12,6 +12,7 @@
         margin: 24px;
     }
     .document-wrapper {
+        margin-top: 20px;
         padding: 24px;
         background: #fff;
     }
