Added translation key and validation

--- a/apps/web/components/Activities/CreateFilterModal.module.less
+++ b/apps/web/components/Activities/CreateFilterModal.module.less
@@ -194,13 +194,14 @@
     line-height: 20px;
     border: none;
   }
-  span {
+  .preview-wrapper {
     flex: 1;
     display: flex;
     justify-content: flex-end;
     :global {
       .ant-btn {
         margin-right: 16px;
+        width: 75px;
         &:last-child {
           margin-right: 0;
         }
