--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -552,6 +552,18 @@
           border-radius: 4px;
           padding: 16px;
           cursor: auto;
+          .formDrugsOptionsItemTooltipTitle {
+            color: #7ec9e0;
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+          .formDrugsOptionsItemTooltipItemEmpty {
+            margin-bottom: 13px;
+          }
+          .formDrugsOptionsItemTooltipItem {
+            margin-bottom: 13px;
+          }
           .formDrugsOptionsItemTooltipItem:hover {
             cursor: pointer;
             text-decoration: underline;
