worked-on-get-photo-albums-integration-in-client-card

--- a/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
+++ b/libs/ui/src/lib/client-dashboard-layout/ClientDashboardLayout.module.less
@@ -6,7 +6,7 @@
   > div {
     &:nth-child(1) {
       width: 100%;
-      max-width: 370px;
+      // max-width: 370px;
       margin-right: 1rem;
       display: flex;
       flex-wrap: wrap;
@@ -34,10 +34,6 @@
     }
   }
 }
-
-
-
-
 
 .allergiesContainer {
   width: 100%;
