--- a/libs/ui/src/lib/custom-tab-menu/CustomTabMenu.module.less
+++ b/libs/ui/src/lib/custom-tab-menu/CustomTabMenu.module.less
@@ -49,7 +49,7 @@
           width: 100%;
           min-height: 40px;
           .ant-collapse-header {
-            padding-left: 21px;
+            padding: 12px 21px;
             border-left: 3px solid white;
             color: var(--light-grey-color);
             font-family: var(--font-family);
@@ -58,13 +58,20 @@
             width: 100%;
             display: flex;
             align-items: center;
+            justify-content: space-between;
+            flex-direction: row-reverse;
+            > span {
+              width: 100%;
+
+              &:first-child {
+                display: flex;
+                justify-content: flex-end;
+              }
+            }
             .anticon {
+              position: static;
               padding: 0;
               font-size: 14px;
-              vertical-align: 0;
-              display: inline-flex;
-              align-items: center;
-              height: 40px;
             }
           }
           .ant-collapse-content {
