--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -1,6 +1,6 @@
 .headerText {
   padding: 0 0 24px 0;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   border-bottom: 1px solid #ecedf0;
   display: flex;
   justify-content: space-between;
@@ -109,6 +109,51 @@
   }
 }
 
+.customScrollbar {
+  max-height: 73vh;
+  overflow: auto;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: transparent;
+    margin: 10px 0px;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: lightgray;
+    border-radius: 100px;
+    visibility: hidden;
+  }
+
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      visibility: visible;
+    }
+  }
+}
+
+.imagesTablePagination {
+  padding-left: 10px;
+  > div {
+    padding: 0px;
+    justify-content: flex-end;
+
+    > div {
+      display: none;
+    }
+
+    > ul {
+      padding-right: 0px;
+    }
+  }
+}
+
 .galleryImgBox {
   display: flex;
   //flex-wrap: wrap;
@@ -127,6 +172,20 @@
     .noAlbum {
       width: 100%;
       text-align: center;
+    }
+
+    .albumImagesDiv {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+    }
+
+    .loadingText {
+      color: gray;
+      text-align: center;
+      width: 100%;
+      padding: 20px 0px 0px 0px;
+      font-weight: bold;
     }
 
     :global {
@@ -778,10 +837,12 @@
   margin-bottom: 10px;
 }
 .mainLayout {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   .headerMenu {
-    padding: 15px 0 0 20px;
+    padding: 0px 0 0 20px;
   }
   /* justify-content: center; */
 }
