--- a/apps/web/components/Activities/CreateFilterModal.module.less
+++ b/apps/web/components/Activities/CreateFilterModal.module.less
@@ -26,6 +26,9 @@
   }
   .btn-add {
     margin-top: 10px;
+    &.disable {
+      background-color: #f5f5f5 !important;
+    }
   }
   .custom-activity {
     justify-content: space-between;
@@ -35,7 +38,6 @@
     .minus-block {
       width: 32px;
       min-width: 32px;
-      // margin-left: 14px;
       height: 32px;
       border: 1px solid #ff5b64;
       border-radius: 50%;
@@ -43,6 +45,15 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
+      &.disable {
+        cursor: not-allowed;
+        border: 1px solid #d5d5d5;
+        :global {
+          .anticon-minus {
+            color: #d5d5d5;
+          }
+        }
+      }
     }
     :global {
       .ant-select {
@@ -95,8 +106,9 @@
       :global {
         .ant-select {
           .ant-select-selector {
+            padding-left: 25px;
             .ant-select-selection-search {
-              margin-left: 15px;
+              margin-left: 13px;
             }
           }
         }
@@ -104,6 +116,7 @@
     }
   }
 }
+
 .filter-field {
   display: flex;
   .visibility-wrapper {
@@ -127,6 +140,19 @@
       }
     }
   }
+  .btn-provider {
+    .disable {
+      background: #f5f5f5 !important;
+      .visibility-wrapper {
+        .icon-text {
+          span {
+            color: #00000040 !important;
+          }
+        }
+      }
+    } 
+  }
+  
   :global {
     .ant-form-item {
       flex: 1;
@@ -139,6 +165,7 @@
           width: 100%;
           height: 40px;
           display: flex;
+         
         }
       }
     }
@@ -179,6 +206,24 @@
       }
     }
   }
+  
+}
+.creator-wrapper {
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  span {
+    font-size: 14px;
+    line-height: 18px;
+    color: #9292A3;
+  }
+  .circle {
+    border-radius: 50%;
+    width: 3px;
+    height: 3px;
+    background: #9292A3;
+    margin: 0 12px;
+  }
 }
 .btn-wrapper {
   margin-top: 30px;
@@ -198,6 +243,9 @@
     flex: 1;
     display: flex;
     justify-content: flex-end;
+    .disable {
+      background: #f5f5f5 !important;
+    }
     :global {
       .ant-btn {
         margin-right: 16px;
@@ -229,7 +277,6 @@
   }
 }
 .radioBtn {
-  color: red;
   span {
     .menu-wrapper {
       .icon {
