--- a/apps/web/pages/activities/index.module.less
+++ b/apps/web/pages/activities/index.module.less
@@ -1651,6 +1651,22 @@
     margin-bottom: 8px;
     padding: 12px 16px 0;
   } 
+  .filter-label {
+    background: var(--gray-background-color);
+    padding: 0px 20px;
+    width: 100%;
+    line-height: 24px;
+    font-size: 12px;
+    margin-bottom: 10px;
+    font-weight: 600;
+  }
+  .filter-user-group {
+    :global {
+       .ant-divider-horizontal {
+        margin: 10px 0;
+      }
+    }
+  }
   :global {
     .ant-input-group-wrapper {
       margin-bottom: 12px;
@@ -1704,96 +1720,6 @@
         }
        }
     }
-    .user-sub-wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 5px 16px;
-      cursor: pointer;
-      &.active {
-        color: #54B2D3;  
-        .sub-child-wrapper { 
-          .sub-child-content { 
-            h6, span{
-              color: #54B2D3;
-            }
-            .checkIcon {
-              color: #54B2D3;  
-            }
-          }
-        }
-        
-       }
-      .sub-child-wrapper {
-        display: flex;
-        .avtarIcon {
-          margin-right: 8px;
-        }
-        .sub-child-content {
-          display: flex;
-          flex-direction: column;
-          
-          h6 {
-            margin: 0;
-            font-size: 14px;
-            font-size: 14px;
-            color: #3D3D46;
-            line-height: 22px;
-          }
-          span {
-            font-size: 12px;
-            line-height: 16px;
-            color: #9292A3;
-          }
-        }
-      }
-    }
-    .user-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 4px 16px;
-      cursor: pointer;
-      .user-tab {
-        display: flex;
-        :global  {
-          .ant-avatar-circle {
-            width: 28px;
-            height: 28px;
-          }
-        }
-        h4 {
-          margin-bottom: 0;
-          font-size: 14px;
-          line-height: 36px;
-          margin-left: 8px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          max-width: 200px;
-        }
-        .you-text {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-left: 10px;
-        }
-      }
-      
-      &.active {
-        .user-tab {
-          h4 {
-            color: #54B2D3;
-          }
-          .you-text {
-            color: #54B2D3
-          }
-        }
-        .check-icon {
-          color: #54B2D3;
-        }
-      }
-    }
   }
   .footer-btn {
     padding: 12px 16px;
@@ -1832,8 +1758,33 @@
     &.active {
       color: #54B2D3;
     }
+    .filter-category {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      .item-name {
+        margin-left: 8px;
+      }
+    }
     .icon-wrapper {
       display: flex;
+      cursor: pointer;
+      .strike-wrapper {
+
+        .strike-line {
+          position: relative;
+          &:before {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 100%;
+            background: #54B2D3;
+            transform: rotate(-45deg);
+            left: 50%;
+          }
+        }
+      }
+      
       :global {
         .anticon-edit {
           display: none;
@@ -1847,5 +1798,127 @@
       }
     }
   }
-  
+  .user-sub-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 16px;
+    cursor: pointer;
+    &.active {
+      color: #54B2D3;  
+      .sub-child-wrapper { 
+        .sub-child-content { 
+          h6, span{
+            color: #54B2D3;
+          }
+          .checkIcon {
+            color: #54B2D3;  
+          }
+        }
+      }
+      
+     }
+    .sub-child-wrapper {
+      display: flex;
+      .avtarIcon {
+        margin-right: 8px;
+      }
+      .sub-child-content {
+        display: flex;
+        flex-direction: column;
+        
+        h6 {
+          margin: 0;
+          font-size: 14px;
+          font-size: 14px;
+          color: #3D3D46;
+          line-height: 22px;
+        }
+        .count-text {
+          font-size: 12px;
+          line-height: 16px;
+          color: #9292A3;
+        }
+        .highlight {
+          color: #54b2d3;
+          padding: 0;
+          background: none;
+        }
+      }
+    }
+  }
+  .user-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 16px;
+    cursor: pointer;
+    .user-tab {
+      display: flex;
+      :global  {
+        .ant-avatar-circle {
+          width: 28px;
+          height: 28px;
+        }
+      }
+      h4 {
+        margin-bottom: 0;
+        font-size: 14px;
+        line-height: 36px;
+        margin-left: 8px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        max-width: 200px;
+      }
+      .you-text {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 10px;
+      }
+      .highlight {
+        color: #54b2d3;
+        padding: 0;
+        background: none;
+      }
+    }
+    
+    &.active {
+      .user-tab {
+        h4 {
+          color: #54B2D3;
+        }
+        .you-text {
+          color: #54B2D3
+        }
+      }
+      .check-icon {
+        color: #54B2D3;
+      }
+    }
+  }
+  .filter-not-found {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    h5 {
+      font-size: 16px;
+      color:var(--grey-text-color);
+      margin: 0;
+      padding-top: 0;
+    }
+    h6 {
+      margin: 0;
+      font-size: 14px;
+      color: var(--light-grey-color);
+    }
+  }  
+  .search-input {
+    padding: 0 20px;
+    margin-bottom: 10px;
+  }
 }
