--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -1,6 +1,6 @@
 .headerText {
   padding: 0 0 24px 0;
-  // margin-bottom: 24px;
+  margin-bottom: 0px;
   border-bottom: 1px solid #ecedf0;
   display: flex;
   justify-content: space-between;
@@ -109,85 +109,18 @@
   }
 }
 
-.customScrollbar {
-  max-height: 73vh;
-  overflow: auto;
-
-  /* width */
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
-
-  /* Track */
-  &::-webkit-scrollbar-track {
-    background: transparent;
-    margin: 10px 0px;
-  }
-
-  /* Handle */
-  &::-webkit-scrollbar-thumb {
-    background: lightgray;
-    border-radius: 100px;
-    visibility: hidden;
-  }
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      visibility: visible;
-    }
-  }
-}
-
-.imagesTablePagination {
-  padding-left: 10px;
-  > div {
-    padding: 0px;
-    justify-content: flex-end;
-
-    > div {
-      display: none;
-    }
-
-    > ul {
-      padding-right: 0px;
-    }
-  }
-}
-
 .galleryImgBox {
   display: flex;
   //flex-wrap: wrap;
   overflow: auto;
   margin-bottom: 20px;
-  height: fit-content;
   .galleryWrap {
-    width: 100%;
-    display: flex;
-    // justify-content: center;
+    display: contents;
+    justify-content: center;
     flex-direction: row;
     align-items: center;
     position: relative;
-    flex-wrap: wrap;
-
-    .noAlbum {
-      width: 100%;
-      text-align: center;
-    }
-
-    .albumImagesDiv {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-    }
-
-    .loadingText {
-      color: gray;
-      text-align: center;
-      width: 100%;
-      padding: 20px 0px 0px 0px;
-      font-weight: bold;
-    }
-
+    //flex-wrap: wrap;
     :global {
       .gridViewItemSkeleton {
         .boxItemImage {
@@ -274,6 +207,9 @@
         border: 1px solid transparent;
         cursor: pointer;
         position: relative;
+        height: 145px;
+        width: 145px;
+
         &:hover {
           border: 1px solid deepskyblue;
           border-radius: 6px;
@@ -301,6 +237,10 @@
           max-width: 100%;
           height: 70px;
           object-fit: cover;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: 1px solid lightgray;
           //padding: 2px;
           &:first-child {
             border-radius: 6px 0 0 0;
@@ -314,15 +254,35 @@
           &:nth-child(4) {
             border-radius: 0 0 6px 0;
           }
+
+          :global {
+            .ant-skeleton-image {
+              width: 55px;
+              height: 55px;
+
+              svg {
+                width: 30px;
+                height: 30px;
+              }
+            }
+          }
           @media only screen and (min-width: 360px) and (max-width: 420px) {
             width: 69px;
           }
         }
         .blankAlbum {
           height: 145px;
-          width: 140px;
+          width: 141.5px;
           border-radius: 4px;
-          background-color: #f4f4f4;
+          border: 1px solid lightgray;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          :global .ant-skeleton-image {
+            width: 115px;
+            height: 120px;
+          }
         }
         h2 {
           font-size: 14px;
@@ -342,6 +302,36 @@
       }
     }
   }
+
+  .albumImagesDiv {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .scrollDiv {
+    max-height: 75vh;
+    padding-bottom: 120px;
+    overflow-y: auto;
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar {
+      width: 7.5px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      display: none;
+      border-radius: 100px;
+      background-color: rgba(0, 0, 0, 0.45);
+    }
+    &:hover::-webkit-scrollbar-thumb {
+      display: block;
+    }
+  }
 }
 .boxItem {
   display: flex;
@@ -355,7 +345,6 @@
     margin: 0 11px 0 11px;
     max-width: 414px;
   }
-
   :global {
     .ant-checkbox-wrapper {
       @media only screen and (max-width: 767px) {
@@ -439,6 +428,15 @@
     height: 130px;
     margin-right: 5px;
     margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid lightgray;
+
+    :global .ant-skeleton-image {
+      width: 112px;
+      height: 112px;
+    }
     cursor: pointer;
     @media only screen and (max-width: 767px) {
       width: 90px;
@@ -484,14 +482,10 @@
   flex-wrap: wrap;
   border-top: 1px solid #ecedf0;
   padding-top: 9px;
-  // margin: 0 14px 14px 14px;
+  margin: 0 14px 14px 14px;
   .photoLabel {
     width: 100%;
     margin-bottom: 12px;
-  }
-  h3 {
-    margin: 0px !important;
-    padding: 10px 0px 0px 14px;
   }
   @media only screen and (max-width: 767px) {
     margin: 0 11px 0 11px;
@@ -837,8 +831,6 @@
   margin-bottom: 10px;
 }
 .mainLayout {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   .headerMenu {
@@ -920,7 +912,7 @@
   }
 }
 .gridViewItemSkeleton {
-  margin-top: 20px;
+  margin-top: 0px;
   @media only screen and (max-width: 767px) {
     max-width: 414px;
   }
@@ -963,16 +955,9 @@
       }
     }
   }
-  > div:last-child {
-    max-width: 500px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    p {
-      margin-top: 20px;
-      margin-left: 10px;
-    }
+  p {
+    margin-top: 20px;
+    margin-left: 10px;
   }
   img {
     margin-top: 12px;
@@ -1049,9 +1034,7 @@
         .ant-table-tbody {
           tr {
             cursor: pointer;
-            &:hover {
-              //background-color: #ECEDF0 !important;
-            }
+
             td {
               background: unset;
               width: 33%;
@@ -1067,6 +1050,27 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+
+  .tableImage {
+    width: 60px;
+    height: 60px;
+    border-radius: 4px;
+    border: 1px solid lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    :global {
+      .ant-skeleton-image {
+        width: 45px;
+        height: 45px;
+        svg {
+          width: 22.5px;
+          height: 22.5px;
         }
       }
     }
@@ -1091,10 +1095,15 @@
     border: 1px solid transparent;
     cursor: pointer;
     .grid-item {
+      border: 1px solid lightgray;
       width: 30px;
       max-width: 100%;
       height: 30px;
       object-fit: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
       &:first-child {
         border-radius: 3px 0 0 0;
       }
@@ -1107,15 +1116,35 @@
       &:nth-child(4) {
         border-radius: 0 0 3px 0;
       }
-      //@media only screen and (min-width: 360px) and (max-width: 420px) {
-      //  width: 69px;
-      //}
+
+      :global .ant-skeleton-image {
+        height: 22px;
+        width: 22px;
+
+        svg {
+          width: 12px;
+          height: 12px;
+        }
+      }
     }
     .blankAlbum {
       height: 60px;
       width: 60px;
       border-radius: 4px;
-      background-color: #f4f4f4;
+      border: 1px solid lightgray;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      :global .ant-skeleton-image {
+        width: 46px;
+        height: 48px;
+
+        svg {
+          width: 25px;
+          height: 25px;
+        }
+      }
     }
   }
 }
@@ -1130,24 +1159,25 @@
       .ant-checkbox {
         height: 17px;
       }
-      span {
+      .ant-checkbox + span {
         display: flex;
+        align-items: center;
       }
     }
     .ant-card {
-      width: 50px;
-      height: 60px;
       .ant-card-body {
-        padding: 0;
-        width: 100%;
-        height: 100%;
+        padding: 0px 10px;
+
+        img {
+          margin-top: 0px;
+        }
       }
     }
   }
   p {
     margin-top: 20px;
     margin-left: 10px;
-    max-width: 500px;
+    max-width: 600px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
