change classname in css

--- a/libs/ui/src/lib/kanban-card/KanbanCard.module.less
+++ b/libs/ui/src/lib/kanban-card/KanbanCard.module.less
@@ -1,4 +1,4 @@
-.cardContent{
+.card-content{
     display: flex;
     flex-direction: column;
     width: 250px;
@@ -9,7 +9,7 @@
     overflow: hidden;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
-    .leadTitleContent{  
+    .lead-title-content{  
         display: flex;
         width: 100%;
         font-weight: 500;
@@ -18,18 +18,18 @@
         cursor: pointer
     }
 
-    .labelAndBtn {
+    .label-and-btn {
         display: flex;
         justify-content: space-between;
         position: relative;
         align-items: center;
 
-        .labelsContent{
+        .labels-content {
             padding: 3px 0px;
             display: flex;
             flex-wrap: wrap;
 
-            .statusBtn {
+            .status-btn {
                 :global{
                     .ant-btn[disabled]{
                         color: white;
@@ -52,17 +52,17 @@
             }
         }
 
-        .statusContent {
+        .status-content {
             display: flex;
             justify-content: flex-end;
 
-            .statusArrow {
+            .status-arrow {
                 font-size: 20px;
             }
         }
     }
 
-    .ownerClientContent {
+    .owner-client-content {
         width: 100%;
         display: flex;
         padding-bottom: 3px;
@@ -71,11 +71,11 @@
         box-sizing: border-box;
         margin-top: 2px;
 
-        .contactContent{
+        .contact-content{
             display: flex;
             gap: 10px;
 
-            .contactContentName {
+            .contact-content-name {
                 display: flex;
                 justify-content: center;
                 align-items: center;
