--- a/libs/ui/src/lib/inline-edit/InlineEdit.module.less
+++ b/libs/ui/src/lib/inline-edit/InlineEdit.module.less
@@ -1044,6 +1044,9 @@
       }
     }
   }
+  .phone-type-content{
+    margin-top: 16px;
+  }
   .profile-main-wrapper {
     .no-data-record {
       display: flex;
