added skeleton and added translation

--- a/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
+++ b/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
@@ -175,3 +175,20 @@
 .mainCard {
   margin-bottom: 16px;
 }
+
+.titleSkeleton{
+  width: 50px;
+  height: 21px !important;
+  margin-bottom: 3px;
+}
+
+.descSkeleton{
+  width: 70px;
+  height: 21px !important;
+}
+
+.countSkeleton{
+  width: 90px;
+  height: 18px !important;
+  margin-bottom: 3px;
+}
