--- a/apps/web/components/Dashboard/Charts/Charts.module.less
+++ b/apps/web/components/Dashboard/Charts/Charts.module.less
@@ -67,3 +67,28 @@
     }
   }
 }
+
+.countSkeleton{
+  width: 90px;
+  height: 18px !important;
+  margin-bottom: 3px;
+}
+
+.titleSkeleton{
+  width: 50px;
+  height: 21px !important;
+  margin-bottom: 3px;
+}
+
+.chartSkeleton{
+  width: 100%;
+  height: 300px !important;
+}
+
+.tableSkeleton{
+  width: 100px;
+  height: 15px !important;
+  @media screen and (max-width: 767px) {
+    width: 38px;
+  }
+}
