Activity filter integration

--- a/apps/web/components/Activities/CreateFilterModal.module.less
+++ b/apps/web/components/Activities/CreateFilterModal.module.less
@@ -88,10 +88,15 @@
        .ant-radio-button-wrapper-checked {
         color: #ffffff;
         background: #54b2d3;
+        &.ant-radio-button-wrapper-disabled {
+          color: #959595;
+          background: #cdd0d1;
+        }
       }
       }
     }
     .filter-menu-wrapper {
+      min-width: 170px;
       margin-right: 20px;
     }
     .client-wrapper {
