--- a/libs/ui/src/lib/image-viewer/ImageViewer.module.less
+++ b/libs/ui/src/lib/image-viewer/ImageViewer.module.less
@@ -37,6 +37,40 @@
   position: relative;
 }
 
+.uppyButtons {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  > div svg {
+    margin: 0px 10px;
+    cursor: pointer;
+    > path:first-child {
+      fill: #54b2d3;
+    }
+
+    &:active {
+      > path:first-child {
+        fill: #40a0c1;
+      }
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    position: static;
+
+    > div svg {
+      margin: 6px 0px 0px 10px;
+      width: 32px;
+      height: 32px;
+    }
+  }
+}
+
 .imageViewerModalHeader {
   position: fixed;
   top: 0;
@@ -172,8 +206,10 @@
   -webkit-overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   .imageViewerModalBodyContainer {
+    position: relative;
     width: 100%;
     height: 100%;
+
     .zoomInOptions {
       position: fixed;
       top: 104px;
@@ -467,7 +503,7 @@
     width: 40px;
     height: 4px;
     border-radius: 4px;
-    background-color: #E3E3E5;
+    background-color: #e3e3e5;
   }
   .title {
     font-family: var(--font-family);
@@ -495,9 +531,19 @@
   box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
   background-color: white;
   > div:first-child {
+    display: flex;
+    align-items: center;
+
     > button {
-      margin-left: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       color: var(--light-grey-color);
+
+      > span {
+        line-height: 0px;
+      }
+
       &:hover {
         color: var(--primary-color);
       }
