add scroll, add shadow effect and working on dahboard switching funtionality

--- a/apps/web/components/Dashboard/Charts/Charts.module.less
+++ b/apps/web/components/Dashboard/Charts/Charts.module.less
@@ -4,6 +4,9 @@
   box-shadow: 3px 0px 10px rgba(0, 34, 65, 0.12);
   border-radius: 4px;
   overflow: auto;
+  &:hover{
+    box-shadow: rgba(0 ,0 ,0 ,34%) 0px 1px 8px;
+  }
   @media  screen and (max-width:991px) {
     .chartsWrap {
       width: 542px;
@@ -34,6 +37,9 @@
   background: #FFFFFF;
   box-shadow: 3px 0px 10px rgba(0, 34, 65, 0.12);
   border-radius: 4px;
+  &:hover{
+    box-shadow: rgba(0 ,0 ,0 ,34%) 0px 1px 8px;
+  }
   :global .ant-table-title {
     color: #3D3D46;
     font-size: 14px;
