--- a/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
+++ b/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
@@ -3,6 +3,9 @@
   background: #FFFFFF;
   box-shadow: 3px 0px 10px rgba(0, 34, 65, 0.12);
   border-radius: 4px;
+  &:hover{
+    box-shadow: rgba(0 ,0 ,0 ,34%) 0px 1px 8px;
+  }
   .cardWrapper{
     background-color: white;
     box-shadow: 2px 2px 15px rgb(0 34 65 / 10%) !important;
@@ -113,6 +116,9 @@
   background: #FFFFFF;
   box-shadow: 3px 0px 10px rgba(0, 34, 65, 0.12);
   border-radius: 4px;
+  &:hover{
+    box-shadow: rgba(0 ,0 ,0 ,34%) 0px 1px 8px;
+  }
   .divider{
     border: 1px solid #ECEDF0;
   }
