small fixed according to kanban canvas

--- a/libs/ui/src/lib/kanban-card/KanbanCard.module.less
+++ b/libs/ui/src/lib/kanban-card/KanbanCard.module.less
@@ -13,7 +13,7 @@
         display: flex;
         width: 100%;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 15.5px;
         color: #3d3d46;
         cursor: pointer
     }
@@ -37,18 +37,18 @@
                     }
                 }
                button {
-                padding: 3px 11px;
-                height: 27px;
+                padding: 0 4px 0;
                 margin-right: 8px;
                 font-size: 12px;
               }
               
             }
 
-            .label{
-                padding: 3px 5px 2px;
-                font-size: 15px;
+            .label {
+                padding: 0 4px 0;
+                font-size: 12px;
                 margin-bottom: 8px;
+                font-weight: 500;
             }
         }
 
