fixed the design issue

--- a/libs/ui/src/lib/menu/Menu.module.less
+++ b/libs/ui/src/lib/menu/Menu.module.less
@@ -63,8 +63,7 @@
     position: relative;
     .activity-icon {
       width: 16px;
-      position: absolute;
-      top: -18px;
+      height: 100%;
     }
     :global &.ant-menu-item-selected {
       .ant-menu-item-icon {
